# planr

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor/: mcp.json
.cursor-plugin/: plugin.json
.cursor/rules/: 000-base.md  000-base.mdc  001-components.mdc  001-svelte-components.md  002-typescript.md  002-typescript.mdc  003-routing.md  003-tailwind.mdc  004-tailwind.md
.cursor/templates/: rulegen.tpl.md  story.tpl.md  task.tpl.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.planr/: api.md  prd.md  roadmap.json  tech-stack.md
.planr/project/: constraints.md  flows.md  ownership.md  product.md  quality-gates.md  state-ssot.md
.planr/stories/: US-001.md  US-002.md  US-003.md  US-004.md  US-005.md  US-006.md  US-007.md  US-008.md  US-009.md  US-010.md
.planr/tooling/: planr.py
docs/: ARCHITECTURE.md  CI.md  CLAUDE_CODE.md  CLI_REFERENCE.md  CODEX.md  CURSOR.md  GOALS.md  HANDOFFS_AND_STORIES.md  IMPORT.md  INSTALL.md  MCP_CONTRACT.md  MCP_GUIDE.md  NPM.md  OPERATING_MODEL.md  RELEASE.md  SECURITY.md  SKILLS.md  TASK_GRAPH_MODEL.md  TESTING.md  TROUBLESHOOTING.md
docs/archive/: implement-autorun.md
docs/fixtures/: mcp-contract.json
docs/planr-spec/: ADRS.md  AI_SPEC.md  ANALYTICS_OBSERVABILITY_SPEC.md  API_AND_DATA_MODEL.md  (+13 more)
examples/: real-world-flow.md
scripts/: build-release.sh  ci-local.sh  generate-formula.sh  install.sh  release.sh  security-local.sh
src/: cli.rs  integrations.rs  main.rs  model.rs  planpack.rs  util.rs
tests/: e2e.rs
(+59 files in other folders)
