[package]
name = "planr"
version = "1.1.16"
edition = "2021"
license = "MIT"
description = "Local-first planning and execution coordination for coding agents"
repository = "https://github.com/instructa/planr"
homepage = "https://github.com/instructa/planr"
readme = "README.md"
keywords = ["planning", "agents", "mcp", "cli", "task-graph"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.80"

[[bin]]
name = "planr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
slug = "0.1"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
